--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2390,7 +2390,7 @@
     <bool name="config_advancedSettingsMode">true</bool>
 
     <!-- Default, comma-delimited, quick settings tiles. See QSConstants.java for a list of all available tiles -->
-    <string name="config_defaultQuickSettingsTiles">wifi,bt,cell,airplane,rotation,flashlight,location,cast,visualizer,hotspot,live_display</string>
+    <string name="config_defaultQuickSettingsTiles">wifi,cell,location,compass,bt,airplane,ambient_display,live_display,flashlight,volume_panel,rotation</string>
 
     <string-array name="config_externalCMServices"></string-array>
 
